remove push from non-master branches

--- a/.github/workflows/main-aws.yml
+++ b/.github/workflows/main-aws.yml
@@ -3,7 +3,7 @@ name: Update AWS infra
 on:
   workflow_dispatch:
   push:
-    branches: [master, aws-basic-structure]
+    branches: [master]
 
 jobs:
   aws-dev:
