--- a/.github/workflows/update-infra.yml
+++ b/.github/workflows/update-infra.yml
@@ -11,7 +11,7 @@ on:
         - destroy
       resource-choice:
         type: choice
-        description: Select AWS resource to create or update
+        description: Select AWS resource
         options:
         - s3
         - sns
@@ -32,7 +32,7 @@ permissions:
       contents: read
 
 jobs:
-  setup:
+  update-infra:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -56,7 +56,7 @@ jobs:
           aws-region: ${{ env.aws_region }}
 
       - name: 'terragrunt run-all'
-        if: ${{ inputs.resource-choice }} == 'all resources' and ${{ inputs.terragrunt-choice }} == 'create'
+        if: (inputs.resource-choice == 'all resources') and (inputs.terragrunt-choice == 'create')
         working-directory: ${{ env.tg_working_dir }}
         run: |
           terragrunt run-all apply --terragrunt-non-interactive
