--- a/.github/workflows/update-infra.yml
+++ b/.github/workflows/update-infra.yml
@@ -56,7 +56,8 @@ jobs:
           aws-region: ${{ env.aws_region }}
 
       - name: 'terragrunt run-all'
-        if: ${{ inputs.resource-choice }} == "all resources" && ${{ inputs.terragrunt-choice }} == "create"
+        # if: ${{ inputs.resource-choice }} == "all resources" && ${{ inputs.terragrunt-choice }} == "create"
+        if: ${{ inputs.resource-choice }} == "all resources"
         working-directory: ${{ env.tg_working_dir }}
         run: |
           terragrunt run-all apply --terragrunt-non-interactive
@@ -67,8 +68,9 @@ jobs:
       #   run: |
       #     terragrunt destroy-all
 
-      # - name: 'Create/Update ${{ inputs.resource-choice }} resources'
-      #   if: ${{ inputs.resource-choice }} != "all resources" and ${{ inputs.terragrunt-choice }} == "create"
-      #   working-directory: ${{ env.tg_working_dir }}
-      #   run: |
-      #     terragrunt apply -auto-approve --terragrunt-working-dir ${{ inputs.resource-choice }}
+      - name: 'Create/Update ${{ inputs.resource-choice }} resources'
+        # if: ${{ inputs.resource-choice }} != "all resources" && ${{ inputs.terragrunt-choice }} == "create"
+        if: ${{ inputs.resource-choice }} != "all resources"
+        working-directory: ${{ env.tg_working_dir }}
+        run: |
+          terragrunt apply -auto-approve --terragrunt-working-dir ${{ inputs.resource-choice }}
