--- a/.github/workflows/update-infra.yml
+++ b/.github/workflows/update-infra.yml
@@ -57,7 +57,7 @@ jobs:
 
       - name: 'terragrunt run-all'
         # if: ${{ inputs.resource-choice }} == "all resources" && ${{ inputs.terragrunt-choice }} == "create"
-        if: ${{ inputs.resource-choice }} == "all resources"
+        if: ${{ inputs.resource-choice }} == 'all resources'
         working-directory: ${{ env.tg_working_dir }}
         run: |
           terragrunt run-all apply --terragrunt-non-interactive
@@ -70,7 +70,7 @@ jobs:
 
       - name: 'Create/Update ${{ inputs.resource-choice }} resources'
         # if: ${{ inputs.resource-choice }} != "all resources" && ${{ inputs.terragrunt-choice }} == "create"
-        if: ${{ inputs.resource-choice }} != "all resources"
+        if: ${{ inputs.resource-choice }} != 'all resources'
         working-directory: ${{ env.tg_working_dir }}
         run: |
           terragrunt apply -auto-approve --terragrunt-working-dir ${{ inputs.resource-choice }}
