--- a/.github/workflows/update-infra.yml
+++ b/.github/workflows/update-infra.yml
@@ -15,7 +15,7 @@ on:
         options:
         - s3
         - sns
-        - all resources
+        - all
     secrets:
       aws_account:
         required: true
@@ -56,21 +56,22 @@ jobs:
           aws-region: ${{ env.aws_region }}
 
       - name: 'terragrunt run-all'
-        # if: ${{ inputs.resource-choice }} == "all resources" && ${{ inputs.terragrunt-choice }} == "create"
-        if: "${{ inputs.resource-choice }} == all resources"
+        # if: ${{ inputs.resource-choice }} == "all" && ${{ inputs.terragrunt-choice }} == "create"
+        # if: ${{ inputs.resource-choice }} == 'all'
+        if: inputs.resource-choice == 'all'
         working-directory: ${{ env.tg_working_dir }}
         run: |
           terragrunt run-all apply --terragrunt-non-interactive
 
       # - name: 'terragrunt destroy-all'
-      #   if: ${{ inputs.resource-choice }} == "all resources" and ${{ inputs.terragrunt-choice }} == "destroy"
+      #   if: ${{ inputs.resource-choice }} == "all" and ${{ inputs.terragrunt-choice }} == "destroy"
       #   working-directory: ${{ env.tg_working_dir }}
       #   run: |
       #     terragrunt destroy-all
 
-      - name: 'Create/Update ${{ inputs.resource-choice }} resources'
-        # if: ${{ inputs.resource-choice }} != "all resources" && ${{ inputs.terragrunt-choice }} == "create"
-        if: ${{ inputs.resource-choice }} != 'all resources'
-        working-directory: ${{ env.tg_working_dir }}
-        run: |
-          terragrunt apply -auto-approve --terragrunt-working-dir ${{ inputs.resource-choice }}
+      # - name: 'Create/Update ${{ inputs.resource-choice }} resources'
+      #   # if: ${{ inputs.resource-choice }} != "all" && ${{ inputs.terragrunt-choice }} == "create"
+      #   if: ${{ inputs.resource-choice }} != 'all'
+      #   working-directory: ${{ env.tg_working_dir }}
+      #   run: |
+      #     terragrunt apply -auto-approve --terragrunt-working-dir ${{ inputs.resource-choice }}
