--- a/.github/workflows/update-infra.yml
+++ b/.github/workflows/update-infra.yml
@@ -45,7 +45,7 @@ jobs:
           terraform_version: ${{ env.tf_version }}
 
       - name: 'Setup Terragrunt'
-        uses: eLco/setup-terragrunt@v1
+        uses: eLco/setup-terragrunt@v1.0.2
         with:
           terragrunt_version: ${{ env.tg_version }}
 
@@ -56,8 +56,6 @@ jobs:
           aws-region: ${{ env.aws_region }}
 
       - name: 'terragrunt run-all'
-        # if: ${{ inputs.resource-choice }} == "all" && ${{ inputs.terragrunt-choice }} == "create"
-        # if: ${{ inputs.resource-choice }} == 'all'
         if: inputs.resource-choice == 'all' && inputs.terragrunt-choice == 'create'
         working-directory: ${{ env.tg_working_dir }}
         run: |
@@ -74,3 +72,9 @@ jobs:
         working-directory: ${{ env.tg_working_dir }}
         run: |
           terragrunt apply -auto-approve --terragrunt-working-dir ${{ inputs.resource-choice }}
+
+      - name: 'Destroy ${{ inputs.resource-choice }} resources'
+        if: inputs.resource-choice != 'all' && inputs.terragrunt-choice == 'destroy'
+        working-directory: ${{ env.tg_working_dir }}
+        run: |
+          terragrunt destroy -auto-approve --terragrunt-working-dir ${{ inputs.resource-choice }}
