--- a/.github/workflows/update-infra.yml
+++ b/.github/workflows/update-infra.yml
@@ -65,7 +65,7 @@ jobs:
         if: inputs.resource-choice == 'all' && inputs.terragrunt-choice == 'destroy'
         working-directory: ${{ env.tg_working_dir }}
         run: |
-          terragrunt destroy-all
+          terragrunt run-all destroy --terragrunt-non-interactive
 
       - name: 'Create/Update ${{ inputs.resource-choice }} resources'
         if: inputs.resource-choice != 'all' && inputs.terragrunt-choice == 'create'
