--- a/.github/workflows/update-infra-pulumi.yml
+++ b/.github/workflows/update-infra-pulumi.yml
@@ -19,7 +19,7 @@ on:
         required: true
 
 env:
-  tg_working_dir: 'iac/terragrunt/aws-default-account/dev/us-east-1/'
+  pulumi_working_dir: 'iac/pulumi'
   env: 'dev'
   aws_region: 'us-east-1'
 
@@ -46,14 +46,13 @@ jobs:
           aws-region: ${{ env.aws_region }}
 
       - name: Install Python requirements
-        working-directory: ${{ env.tg_working_dir }}
+        working-directory: "${{ env.pulumi_working_dir }}/${{ inputs.resource-choice }}"
         run: |
           pip install -r requirements.txt
 
-      # - uses: pulumi/actions@v3
-      #   with:
-      #     command: up
-      #     stack-name: dev
-      #   env:
-      #     PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
-
+      - uses: pulumi/actions@v3
+        with:
+          command: up
+          stack-name: "${{ inputs.resource-choice }}-stack-${{ env.env }}"
+        env:
+          PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
