--- a/.github/workflows/update-infra-pulumi.yml
+++ b/.github/workflows/update-infra-pulumi.yml
@@ -79,3 +79,11 @@ jobs:
           work-dir: "${{ env.pulumi_working_dir }}/${{ inputs.resource-choice }}"
         env:
           PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
+
+      - name: Pulumi stack rm
+        if: inputs.pulumi-choice == 'destroy'
+        working-directory: "${{ env.pulumi_working_dir }}/${{ inputs.resource-choice }}"
+        env:
+          PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
+        run: |
+          pulumi stack rm ${{ inputs.resource-choice }}-stack-${{ env.env }} --force
