Pulumi - update pipeline

--- a/.github/workflows/update-infra-pulumi.yml
+++ b/.github/workflows/update-infra-pulumi.yml
@@ -16,6 +16,7 @@ on:
         options:
         - s3
         - sns
+        - sns_aws_backend
     secrets:
       aws_account:
         required: true
