--- a/.github/workflows/update-infra-pulumi.yml
+++ b/.github/workflows/update-infra-pulumi.yml
@@ -81,6 +81,7 @@ jobs:
           work-dir: "${{ env.pulumi_working_dir }}/${{ inputs.resource-choice }}"
         env:
           PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
+          PULUMI_CONFIG_PASSPHRASE: ${{ secrets.PULUMI_PASSPHRASE }}
 
       - name: Pulumi destroy
         if: inputs.pulumi-choice == 'destroy'
@@ -91,11 +92,13 @@ jobs:
           work-dir: "${{ env.pulumi_working_dir }}/${{ inputs.resource-choice }}"
         env:
           PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
+          PULUMI_CONFIG_PASSPHRASE: ${{ secrets.PULUMI_PASSPHRASE }}
 
       - name: Pulumi stack rm
         if: inputs.pulumi-choice == 'destroy'
         working-directory: "${{ env.pulumi_working_dir }}/${{ inputs.resource-choice }}"
         env:
           PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
+          PULUMI_CONFIG_PASSPHRASE: ${{ secrets.PULUMI_PASSPHRASE }}
         run: |
           pulumi stack rm ${{ inputs.resource-choice }}-stack-${{ env.env }} --force -y
