--- a/.github/workflows/update-infra-pulumi.yml
+++ b/.github/workflows/update-infra-pulumi.yml
@@ -82,6 +82,7 @@ jobs:
         env:
           PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
           PULUMI_CONFIG_PASSPHRASE: ${{ secrets.PULUMI_PASSPHRASE }}
+          PULUMI_CONFIG: '{}'
 
       - name: Pulumi destroy
         if: inputs.pulumi-choice == 'destroy'
@@ -93,6 +94,7 @@ jobs:
         env:
           PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
           PULUMI_CONFIG_PASSPHRASE: ${{ secrets.PULUMI_PASSPHRASE }}
+          PULUMI_CONFIG: '{}'
 
       - name: Pulumi stack rm
         if: inputs.pulumi-choice == 'destroy'
